--- a/邮专/金融系/微观经济学.md
+++ b/邮专/金融系/微观经济学.md
@@ -14,5 +14,32 @@
 
 学科性质：社会科学（不可重复性），（自然科学具有可重复性，好学）
 
+稀缺——相对稀缺
 
+短缺——绝对概念
 
+需求是无限的
+
+- 生存需求：吃喝穿住行
+- 享受需求：住好房子，吃好饭
+- 发展需求：实现自我价值
+
+经济学解决资源的稀缺和需求的无限性之间的矛盾。
+
+> 经济理论认知
+
+理论是经过实践检验的假说。
+
+假说就是人们对事物的一种判断。
+
+经济学最基本的两个假说
+
+- 经济人假说
+  - 人都有个性追求
+- 信息完备性假说
+
+消费者的要求：满足最大化。
+
+生产者的要求：利润最大化
+
+![image-20221225101315260](https://kangrui-pictures.oss-cn-beijing.aliyuncs.com/img/image-20221225101315260.png)
